--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "devDependencies": {
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
+    "@types/sinon": "^9.0.11",
+    "@types/sinon-chai": "^3.2.5",
     "chai": "^4.3.3",
     "mocha": "^8.3.1",
+    "sinon": "^9.2.4",
+    "sinon-chai": "^3.5.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
